--- a/src/Compoent/Bottom/Bottom.scss
+++ b/src/Compoent/Bottom/Bottom.scss
@@ -7,10 +7,11 @@
     width: 450px;
     height: fit-content;
     padding: 15px;
+    position: relative;
     border-radius: 12px;
     background-color: rgba(255, 255, 255, 0.2);
-    margin-top: 60px;
-    margin-left: 30px;
+    left: 37%;
+    margin-top: 20px;
     
 }
 
