--- a/src/Compoent/Header/Header.scss
+++ b/src/Compoent/Header/Header.scss
@@ -7,7 +7,8 @@
     padding: 10px;
     display: flex;
     position: relative;
-    margin-top: 300px;
+    left: 35%;
+    margin-top: 20px;
     font-family: $font-primary;
 
     h1{
